--- a/styles/global/_global.scss
+++ b/styles/global/_global.scss
@@ -114,21 +114,21 @@ p {
 }
 
 //? MAKE BUTTON
-@mixin make_button($color_text, $color_background, $color_light) {
-    background-color: $color_background;
+@mixin make_button($background_color, $text_color, $background_hover, $text_hover) {
+    background-color: $background_color;
     padding: 0.6rem 2rem;
     border-radius: 10rem;
     font-family: $open_sans;
     text-transform: uppercase;
     font-size: 14px;
-    color: $color_text;
+    color: $text_color;
     font-weight: bold;
     transition: all 0.2s ease-in-out;
-    border: 1px solid $color_background;
+    border: 1px solid $background_color;
 
     &:hover {
-        background: $color_primary_light;
-        color: $color_background;
+        background: $background_hover;
+        color: $text_hover;
     }
 }
 
