--- a/styles/contact.css
+++ b/styles/contact.css
@@ -42,7 +42,7 @@ nav.nav_container {
   align-items: center;
   width: 100%;
   background-color: #fcffff;
-  padding: 1rem 8rem;
+  padding: 1rem 4rem;
   z-index: 9999;
   border-bottom: 1px solid rgba(12, 23, 28, 0.2509803922);
 }
@@ -161,7 +161,6 @@ nav.nav_container .social_container i.social_icons:hover {
 }
 .nav_link_container ul.nav_links .social_container_2 .social_icons_2 {
   padding: 0.5rem;
-  cursor: pointer;
   font-size: 18px;
   border-radius: 100%;
   opacity: 0;
@@ -189,7 +188,7 @@ nav.nav_container .social_container i.social_icons:hover {
   pointer-events: all;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 980px) {
   nav.nav_container {
     padding: 1rem 4rem;
   }
@@ -226,74 +225,72 @@ nav.nav_container .social_container i.social_icons:hover {
     font-size: 2.369rem;
   }
 }
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #fcffff;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display", serif;
+}
+
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1rem;
+}
+
+.main_body {
+  min-height: 100vh;
+  height: 100%;
+}
+
 footer.footer_area {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 1rem 8rem;
-  background: rgba(12, 23, 28, 0.1019607843);
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-  color: rgba(12, 23, 28, 0.7490196078);
-}
-footer.footer_area .short_links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-footer.footer_area .short_links a {
-  margin: 0rem 1rem;
-  color: rgba(12, 23, 28, 0.7490196078);
-}
-footer.footer_area .short_links a:hover {
-  color: #0c171c;
+  background: rgba(12, 23, 28, 0.0509803922);
+  padding: 1.5rem 4rem;
 }
 footer.footer_area .social_container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  gap: 0.5rem;
 }
-footer.footer_area .social_container .social_icon svg {
-  margin: 0rem 1rem;
-  transition: 0.3s ease-in-out;
-  color: rgba(12, 23, 28, 0.7490196078);
-}
-footer.footer_area .social_container .social_icon svg:hover {
+footer.footer_area .social_container a.footer_social_link i.social_icons {
+  padding: 0.5rem;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 100%;
   color: #0c171c;
 }
+footer.footer_area .social_container a.footer_social_link i.social_icons:hover {
+  background: rgba(173, 80, 210, 0.2431372549);
+}
 
-@media screen and (max-width: 1040px) {
+@media screen and (max-width: 550px) {
   footer.footer_area {
-    font-size: 0.875rem;
-    padding: 1rem 2rem;
-  }
-  footer.footer_area .social_container svg {
-    height: 0.8rem;
-    width: 0.8rem;
-  }
-  footer.footer_area .copyright_text p {
-    font-size: 0.8rem;
-  }
-}
-@media screen and (max-width: 900px) {
-  footer.footer_area {
-    flex-wrap: wrap-reverse;
-    justify-content: center;
-    gap: 0.7rem;
-    padding: 1rem 1rem;
-  }
-  footer.footer_area .links.dots {
-    display: none;
-  }
-}
-@media screen and (max-width: 375px) {
-  footer.footer_area {
-    align-items: flex-start;
-    padding: 1rem 0rem;
-  }
-  footer.footer_area .short_links a {
-    margin: 0rem 0.5rem;
+    text-align: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 1.5rem 2rem;
+    gap: 1rem;
   }
 }
 header {
@@ -432,26 +429,12 @@ main section.contact_form_area .input_group_area .input_group textarea {
   min-height: 3rem;
 }
 main section.contact_form_area button.btn {
-  background-color: #ad50d2;
-  padding: 0.6rem 2rem;
-  border-radius: 10rem;
-  font-family: "Open Sans", sans-serif;
-  text-transform: uppercase;
-  font-size: 14px;
-  color: #fcffff;
-  font-weight: bold;
-  transition: all 0.2s ease-in-out;
-  border: 1px solid #ad50d2;
   cursor: pointer;
   gap: 1rem;
   width: 100%;
   margin-top: 2rem;
   border: none;
   outline: none;
-}
-main section.contact_form_area button.btn:hover {
-  background: rgba(173, 80, 210, 0.2431372549);
-  color: #ad50d2;
 }
 main section.contact_form_area button.btn.disabled {
   cursor: not-allowed;
@@ -466,15 +449,15 @@ main section.contact_form_area button.btn svg {
   fill: #fcffff;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 980px) {
   main {
     padding: 0rem 4rem;
   }
   main section.contact_info_area h1 {
-    font-size: 3.5rem;
+    font-size: 4.209rem;
   }
   main section.contact_info_area p {
-    font-size: 0.875rem;
+    font-size: 1rem;
     width: 100%;
     margin: auto;
   }
@@ -483,12 +466,12 @@ main section.contact_form_area button.btn svg {
     margin: 2rem auto;
   }
   main section.contact_form_area form .input_group_area .input_group label p {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
   main section.contact_form_area form .input_group_area .input_group input,
   main section.contact_form_area form .input_group_area .input_group select,
   main section.contact_form_area form .input_group_area .input_group textarea {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
 }
 @media screen and (max-width: 550px) {
@@ -496,7 +479,7 @@ main section.contact_form_area button.btn svg {
     height: 0.7rem;
   }
   header .hero_text_container .contact_info a p {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
   main {
     padding: 0rem 2rem;
@@ -505,7 +488,7 @@ main section.contact_form_area button.btn svg {
     text-align: left;
   }
   main section.contact_info_area h1 {
-    font-size: 2.5rem;
+    font-size: 3.157rem;
   }
   main section.contact_form_area .input_group_area {
     display: flex;
@@ -521,6 +504,6 @@ main section.contact_form_area button.btn svg {
     min-height: 3rem;
   }
   main section.contact_form_area button.btn {
-    font-size: 0.875rem;
+    font-size: 1rem;
   }
 }/*# sourceMappingURL=contact.css.map */
