--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -1,8 +1,7 @@
-@import './global/global';
-@import './global/navigation';
-@import './global/footer';
-@import './global/responsive';
-
+@import "./global/global";
+@import "./global/navigation";
+@import "./global/footer";
+@import "./global/responsive";
 
 //? CONTACT HEADER AREA STYLING start -------------------------------
 header {
@@ -26,13 +25,13 @@ header {
             align-items: center;
             width: 100%;
             flex-wrap: wrap;
-            gap: .5rem;
+            gap: 0.5rem;
 
             a {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                gap: .5rem;
+                gap: 0.5rem;
                 color: $color_primary;
 
                 svg {
@@ -67,7 +66,6 @@ main {
 
     //? CONTACT FORM AREA STYLING ------------
     section.contact_form_area {
-
         form {
             width: 70%;
             margin: 6rem auto;
@@ -107,8 +105,8 @@ main {
                     outline: none;
                     width: 100%;
                     height: 2.5rem;
-                    margin-top: .5rem;
-                    padding: .5rem;
+                    margin-top: 0.5rem;
+                    padding: 0.5rem;
                     font-family: $open_sans;
                     font-size: $paragraph;
                     border-radius: $border_radius;
@@ -121,13 +119,12 @@ main {
                     width: 100%;
                     resize: vertical;
                     max-height: 10rem;
-                    min-height: 3rem
+                    min-height: 3rem;
                 }
             }
         }
 
         button.btn {
-            @include make_button($color_white, $color_primary);
             cursor: pointer;
             gap: 1rem;
             width: 100%;
@@ -146,13 +143,12 @@ main {
 
             svg {
                 height: 1rem;
-                transition: all .3s ease-in-out;
+                transition: all 0.3s ease-in-out;
                 fill: $color_white;
             }
         }
     }
 }
-
 
 //? RESPONSIVE STYLING
 @include tablet {
@@ -187,17 +183,15 @@ main {
                 }
             }
         }
-
     }
 }
 
 @include mobile {
-
     header {
         .hero_text_container {
             .contact_info a {
                 svg {
-                    height: .7rem;
+                    height: 0.7rem;
                 }
 
                 p {
@@ -231,7 +225,7 @@ main {
                 textarea {
                     height: 5rem !important;
                     max-height: 8rem;
-                    min-height: 3rem
+                    min-height: 3rem;
                 }
             }
 
